// 版本号
syntax = "proto3";

package proto;

//请求结构体
message UserRequest {
    string name = 1;
}

//相应结构体
message UserResponse {
    int32 id = 1;
    string name = 2;
    int32 age = 3;
    repeated string hobby = 4;
}

// service定义方法
service UserInfoService {
    rpc GetUserInfo (UserRequest) returns (UserResponse) {
    }
}